# sysopy

./: CMakeLists.txt  LICENSE  README.md
kolos2/: cheatsheet2.c
zestaw1/zad1/: library.c  library.h  main.c  main_dynamic.c  makefile
zestaw1/zad2/: main.c  makefile
zestaw1/zad3a/: main_dynamic.c  makefile
zestaw1/zad3b/: library.h  makefile
zestaw2/zad1/: main.c  makefile  osx_tests  ubuntu_tests.txt  wyniki.txt
zestaw2/zad2/: main.c
zestaw2/zad2b/: main.c  test
zestaw3/zad1/: main.c
zestaw3/zad2/: breaker.c  main.c  sample
zestaw3/zad3/: big_cpu  big_cpu.c  big_data.c  breaker.c  main.c  makefile  sample  test
zestaw4/zad1/: dater.sh  main.c  main_2.c
zestaw4/zad2/: child.c  main.c  makefile
zestaw4/zad3/: main.c
zestaw5/zad1/: main.c  sample
zestaw5/zad2/: Makefile  main.c  master.c  slave.c
zestaw6/zad1/: Makefile  client.c  communication.h  server.c
zestaw6/zad2/: Makefile  client.c  communication.h  server.c
zestaw7/zad1/: Makefile  barber.c  clients.c  common.h  handler_of_clients.c
zestaw7/zad2/: Makefile  barber.c  clients.c  common.h  handler_of_clients.c  shared_utils.h
zestaw8/: edge_detection.txt  elephant.txt  jablko.pgm  jablko_1.pgm  main.c  makefile  melon.pgm  melon_2.pgm  melon_4.pgm  time_res.txt
zestaw9/zad1/: main.c  makefile
zestaw9/zad2/: Pan_Tadeusz.txt  config  main.c
